--- a/SistemaEstudiantesSpring/src/main/resources/application.properties
+++ b/SistemaEstudiantesSpring/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Evitar que se cree el esquema nuevamente
 
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 # Desactivar el uso de tomcat
 
